[gd_scene load_steps=5 format=2]

[ext_resource path="res://Models/TestModels/Wandering/scout_girl.glb" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Bot.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.921959
height = 1.99123

[sub_resource type="CapsuleShape" id=2]
radius = 6.55195
height = 9.449

[node name="Bot" type="KinematicBody"]
axis_lock_motion_y = true
move_lock_y = true
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2.29815, -1.00455e-07 )
shape = SubResource( 1 )

[node name="DetectArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="DetectArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.171715, 1.47538, 10.5179 )
shape = SubResource( 2 )

[node name="scout_girl" parent="." instance=ExtResource( 1 )]

[node name="BoneAttachment" parent="scout_girl/Armature/Skeleton" index="0"]
transform = Transform( 0.991092, 0.107959, 0.0778513, 0.0153414, 0.492661, -0.870111, -0.132289, 0.865949, 0.482345, -0.186553, 3.21963, -1.15459 )

[node name="AnimationPlayer" parent="scout_girl" index="1"]
autoplay = "Idle"

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="NavigationAgent" type="NavigationAgent" parent="."]

[node name="UpdatePathTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="UpdatePathTimer" to="." method="_on_UpdatePathTimer_timeout"]

[editable path="scout_girl"]
